Release AgentTrace 0.2.0