@@ -28,12 +28,13 @@ Windows Java service
       Ubuntu/WSL2 worker
           |
           v
-      cuVS brute-force cosine index on the NVIDIA GPU
+      cuVS exact or CAGRA cosine index on the NVIDIA GPU
 ```
 
-The worker keeps metadata on the host and vectors on the GPU. It caches exact
-cuVS indexes for metadata-filter combinations, supports bulk duplicate
-candidate generation, and verifies duplicate thresholds with exact cosine.
+The worker keeps metadata on the host and vectors on the GPU. It caches cuVS
+indexes for metadata-filter combinations, batches queries with matching
+filters, supports bulk duplicate candidate generation, and verifies duplicate
+thresholds with exact cosine.
 
 ## Install
 
@@ -66,9 +67,10 @@ Run the labeled evaluation from another PowerShell terminal:
 ```powershell
 java --add-modules jdk.incubator.vector `
   --enable-native-access=ALL-UNNAMED `
-  -jar target\agenttrace-0.1.0.jar `
+  -jar target\agenttrace-0.2.0.jar `
   evaluate `
   --backend cuvs `
+  --cuvs-algorithm brute_force `
   --cuvs-url http://127.0.0.1:8765 `
   --data sample-data\aguvis-500-minilm.json `
   --labels labels\aguvis-500-intents-v1.json `
@@ -86,13 +88,41 @@ same Recall@5 (`0.608`), MRR (`0.965`), and six duplicate groups. The controlled
 failure evaluation also matches: parent-excluded HitRate@5 is `1.000` and MRR
 is `0.918`.
 
-The current cuVS worker performs one localhost request per search. At only 500
-vectors that transport overhead dominates, so the committed timing is a
-correctness baseline rather than evidence of acceleration.
+Exact cuVS remains the ground-truth path. Select approximate CAGRA with
+`--cuvs-algorithm cagra` (or `--backend cuvs-cagra`). Batched searches use one
+localhost request and one GPU query matrix per compatible metadata filter.
 
-## Remaining scale work
+Run the matched-recall benchmark:
 
-- Add batched query transport so GPU measurements exclude per-query HTTP cost.
-- Add cuVS CAGRA for approximate search and tune it at matched recall.
-- Benchmark 10K, 100K, and 1M real vectors.
-- Record throughput and GPU memory alongside build time and p50/p95 latency.
+```powershell
+java --add-modules jdk.incubator.vector `
+  --enable-native-access=ALL-UNNAMED `
+  -jar target\agenttrace-0.2.0.jar `
+  benchmark `
+  --data work\aguvis-10000-minilm.json `
+  --index data\benchmark-10000-lucene-index `
+  --queries 500 `
+  --k 10 `
+  --output reports\windows-cpu-gpu-10000.json
+```
+
+The report records build time, batched throughput, single-query p50/p95
+latency, Recall@K, full-recall rate, and whether each returned top result is in
+the exact ground-truth set. Batch timings include JSON and localhost WSL2
+transport. Remaining scale work is 100K/1M vectors plus GPU memory and power
+telemetry.
+
+## Verified 10K result
+
+The Windows RTX 4070 Super run used 10,000 real mobile-navigation MiniLM
+vectors and 500 deterministic Top-10 queries:
+
+| Backend | Recall@10 | Batched queries/s | Individual p50 |
+|---|---:|---:|---:|
+| cuVS exact | 1.0000 | 5,113 | 4.32 ms |
+| Lucene HNSW | 0.9968 | 3,060 | 0.26 ms |
+| cuVS CAGRA | 1.0000 | 5,352 | 6.58 ms |
+
+Each timed batch follows an untimed same-shape warm-up. CAGRA is about 1.75x
+faster than Lucene for this batch, but Lucene is substantially faster for
+single requests because it has no HTTP/WSL2 boundary.
